@@ -85,15 +85,11 @@ extern  GList*                  nwamui_ncp_find_ncu(NwamuiNcp *self, GCompareFun
 
 extern	GtkListStore*           nwamui_ncp_get_ncu_list_store ( NwamuiNcp *self );
 
-extern	GtkTreeStore*           nwamui_ncp_get_ncu_tree_store ( NwamuiNcp *self );
-
 extern  NwamuiObject*           nwamui_ncp_get_ncu_by_device_name( NwamuiNcp *self, const gchar* device_name );
 
 extern void                     nwamui_ncp_foreach_ncu(NwamuiNcp *self, GFunc func, gpointer user_data);
 
 extern void                     nwamui_ncp_foreach_ncu_foreach_wifi_info(NwamuiNcp *self, GHFunc func, gpointer user_data);
-
-extern void                     nwamui_ncp_foreach_ncu_list_store( NwamuiNcp *self, GtkTreeModelForeachFunc func, gpointer user_data );
 
 extern void                     nwamui_ncp_add_ncu( NwamuiNcp* self, NwamuiNcu* new_ncu );
 
