@@ -77,8 +77,6 @@ struct auth_data {
     { AUTOCONF_SELECT_AUTH, UI_AUTH_AUTOCONF_SELECT_AUTH },
     { AUTOCONF_WLAN_AUTH, UI_AUTH_AUTOCONF_WLAN_AUTH },
     { AUTOCONF_WRITE_AUTH, UI_AUTH_AUTOCONF_WRITE_AUTH },
-    { MANAGE_LOCATION_AUTH, UI_AUTH_MANAGE_LOCATION_AUTH },
-    { MODIFY_LOCATION_AUTH, UI_AUTH_MODIFY_LOCATION_AUTH },
     { NULL, 0 }
 };
 
