@@ -58,19 +58,16 @@ typedef enum {
 #define	AUTOCONF_SELECT_AUTH  "solaris.network.autoconf.select"
 #define	AUTOCONF_WLAN_AUTH    "solaris.network.autoconf.wlan"
 #define	AUTOCONF_WRITE_AUTH   "solaris.network.autoconf.write"
-#define	MANAGE_LOCATION_AUTH  "solaris.smf.manage.location"
-#define	MODIFY_LOCATION_AUTH  "solaris.smf.modify.location"
+
 /* Value */
 #define	UI_AUTH_AUTOCONF_READ_AUTH    0x01
 #define	UI_AUTH_AUTOCONF_REFRESH_AUTH 0x02
 #define	UI_AUTH_AUTOCONF_SELECT_AUTH  0x04
 #define	UI_AUTH_AUTOCONF_WLAN_AUTH    0x08
 #define	UI_AUTH_AUTOCONF_WRITE_AUTH   0x10
-#define	UI_AUTH_MANAGE_LOCATION_AUTH  0x20
-#define	UI_AUTH_MODIFY_LOCATION_AUTH  0x40
 
 #define UI_AUTH_LEAST (UI_AUTH_AUTOCONF_READ_AUTH | UI_AUTH_AUTOCONF_REFRESH_AUTH | UI_AUTH_AUTOCONF_SELECT_AUTH | UI_AUTH_AUTOCONF_WLAN_AUTH)
-#define UI_AUTH_ALL (UI_AUTH_LEAST | UI_AUTH_AUTOCONF_WRITE_AUTH | UI_AUTH_MANAGE_LOCATION_AUTH | UI_AUTH_MODIFY_LOCATION_AUTH)
+#define UI_AUTH_ALL (UI_AUTH_LEAST | UI_AUTH_AUTOCONF_WRITE_AUTH)
 #define UI_AUTH_WIRELESS_DIALOG (UI_AUTH_AUTOCONF_WLAN_AUTH | UI_AUTH_AUTOCONF_REFRESH_AUTH)
 #define UI_AUTH_ENABLE_OBJECT (UI_AUTH_AUTOCONF_SELECT_AUTH | UI_AUTH_AUTOCONF_REFRESH_AUTH)
 #define UI_AUTH_COMMIT_OBJECT (UI_AUTH_AUTOCONF_WRITE_AUTH | UI_AUTH_AUTOCONF_REFRESH_AUTH)
